changed colors, moved some stuff, added footer

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- WHY THE BOOK? -->
     <section id="whyBook" class="p-3">
       <div class="col-md-8 offset-md-2 d-none d-sm-block">
-        <h1>What makes this guide unique?</h1>
+        <h1>What Makes This Guide Unique?</h1>
         <p>By combining the never before talked about experiences of multiple high-profile entrepreneurs, this book brings insight into what made them so successful.</p>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam officia aspernatur iste nemo. Harum voluptatum doloribus, id reiciendis ea voluptates commodi similique rem exercitationem
