--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-md-6 m-auto">
+            <h3>Next Big Thing</h3>
             <p class="lead">Copyright &copy; <span id="year"></span></p>
           </div>
         </div>
