fixed image links

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <p>By combining the never before talked about experiences of multiple high-profile entrepreneurs, this book brings insight into what made them so successful.</p>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam officia aspernatur iste nemo. Harum voluptatum doloribus, id reiciendis ea voluptates commodi similique rem exercitationem
-          obcaecati quam voluptatibus minima deleniti ipsa molestiae accusamus omnis recusandae ipsam quaerat aspernatur, impedit animi aperiam autem! Ut excepturi aperiam quasi soluta, officiis
+          ob`ecati quam voluptatibus minima deleniti ipsa molestiae accusamus omnis recusandae ipsam quaerat aspernatur, impedit animi aperiam autem! Ut excepturi aperiam quasi soluta, officiis
           dolorum fugiat voluptate.
         </p>
       </div>
