fixed image error

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           <div class="col-sm-8 d-none d-sm-block align-self-center">
             <h3 class="text-center"><em>Let it flow, let it flow, let it flow...</em></h3>
-            <img src="/img/creativity-flow.png" alt="" class="img-fluid" />
+            <img src="img/creativity-flow.png" alt="" class="img-fluid" />
           </div>
         </div>
       </div>
@@ -108,7 +108,7 @@
             </p>
           </div>
           <div class="col-sm-4 order-1" id="authorBioPic">
-            <img src="/img/author.png" alt="" class="img-fluid" id="authorPic" />
+            <img src="img/author.png" alt="" class="img-fluid" id="authorPic" />
           </div>
           <div class="col-sm-2 flex-column">
             <div class="p-4 align-self-top">
