--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <!-- NAV BAR -->
-    <nav class="navbar navbar-expand-sm navbar-light bg-dark fixed-top py-3" id="main-nav">
+    <nav class="navbar navbar-expand-sm navbar-light bg-dark fixed-top py-3">
       <div class="container">
         <a href="index.html" class="navbar-brand">NBT</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -172,7 +172,6 @@
     ></script>
     <script>
       $('#year').text(new Date().getFullYear());
-      $('body').scrollspy({ target: '#main-nav' });
     </script>
   </body>
 </html>
