fixed color error

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="#home" class="nav-link">Home</a>
+              <a href="#splash" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
               <a href="#aboutBook" class="nav-link">About The Book</a>
